general readme and code improvements

--- a/Converter/scraped_html/alter-user.html
+++ b/Converter/scraped_html/alter-user.html
@@ -256,7 +256,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2022-04-23 21:14">2 hours, 4 minutes ago</span></dd>
+<span class="datetime" title="2022-04-23 21:14">1 day ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
