--- a/Converter/scraped_html/check-table.html
+++ b/Converter/scraped_html/check-table.html
@@ -256,7 +256,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2022-04-23 22:53">26 minutes ago</span></dd>
+<span class="datetime" title="2022-04-23 22:53">22 hours, 40 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
