--- a/Converter/scraped_html/delete.html
+++ b/Converter/scraped_html/delete.html
@@ -255,12 +255,12 @@
         <dt>Created</dt>
         <dd>
 
-<span class="datetime" title="2010-08-16 15:10">11 years, 7 months ago</span></dd>
+<span class="datetime" title="2010-08-16 15:10">11 years, 8 months ago</span></dd>
 
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2021-12-01 00:32">4 months, 1 week ago</span></dd>
+<span class="datetime" title="2022-04-23 23:22">22 hours, 11 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -551,8 +551,8 @@ clause deletes all rows. A faster way to do this, when you do not need to know
 the number of deleted rows, is to use <code class="highlight fixed" style="white-space:pre-wrap">TRUNCATE TABLE</code>. However,
 within a transaction or if you have a lock on the table, 
 <code class="fixed" style="white-space:pre-wrap">TRUNCATE TABLE</code> cannot be used whereas <code class="fixed" style="white-space:pre-wrap">DELETE</code>
-can. See <code class="highlight fixed" style="white-space:pre-wrap"><a href="/kb/en/truncate-table/">TRUNCATE TABLE</a></code>, and
-<code class="highlight fixed" style="white-space:pre-wrap"><a href="/kb/en/lock/">LOCK</a></code>.</p>
+can. See <a href="/kb/en/truncate-table/">TRUNCATE TABLE</a>, and
+<a href="/kb/en/lock/">LOCK</a>.</p>
 <h3 class="anchored_heading" id="partition">PARTITION</h3>
 <p>See <a href="/kb/en/partition-pruning-and-selection/">Partition Pruning and Selection</a> for details.</p>
 <h3 class="anchored_heading" id="for-portion-of">FOR PORTION OF</h3>
