--- a/Converter/scraped_html/flush-query-cache.html
+++ b/Converter/scraped_html/flush-query-cache.html
@@ -260,7 +260,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2017-09-23 23:53">4 years, 6 months ago</span></dd>
+<span class="datetime" title="2022-04-24 13:25">8 hours, 10 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -409,8 +409,8 @@
         <h2 class="anchored_heading" id="description">Description</h2>
 <p>You can defragment <a href="/kb/en/the-query-cache/">the query cache</a> to better utilize its memory with
 the <code>FLUSH QUERY CACHE</code> statement. The statement does not remove any queries from the cache.</p>
-<p>The <code><a href="/kb/en/reset/">RESET QUERY CACHE</a></code> statement removes all query results from the query cache.
-The <code><a href="/kb/en/flush/">FLUSH TABLES</a></code> statement also does this.</p>
+<p>The <a href="/kb/en/reset/">RESET QUERY CACHE</a> statement removes all query results from the query cache.
+The <a href="/kb/en/flush/">FLUSH TABLES</a> statement also does this.</p>
 
     </div>
 
