--- a/Converter/scraped_html/load-index.html
+++ b/Converter/scraped_html/load-index.html
@@ -23,9 +23,9 @@
     <meta property="og:image" content="http://mariadb.comaskmonty-logo.png" />
     <meta property="og:site_name" content="MariaDB KnowledgeBase" />
     <meta property="fb:admins" content="514852603" />
-    <meta property="og:description" content="Loads one or more indexes from one or more MyISAM/Aria tables into a key buffer" />
+    <meta property="og:description" content="Loads one or more indexes from one or more MyISAM/Aria tables into a key buffer." />
 
-    <meta name="description" content="Loads one or more indexes from one or more MyISAM/Aria tables into a key buffer" />
+    <meta name="description" content="Loads one or more indexes from one or more MyISAM/Aria tables into a key buffer." />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"/>
@@ -264,7 +264,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2013-11-04 09:51">8 years, 5 months ago</span></dd>
+<span class="datetime" title="2022-04-24 18:41">3 hours ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -438,8 +438,7 @@ tbl_index_list:
 <p>The <code class="fixed" style="white-space:pre-wrap">LOAD INDEX INTO CACHE</code> statement preloads a table index into the key
 cache to which it has been assigned by an explicit <a href="/kb/en/cache-index/"><code class="fixed" style="white-space:pre-wrap">CACHE INDEX</code></a>
 statement, or into the default key cache otherwise. 
-<code class="fixed" style="white-space:pre-wrap">LOAD INDEX INTO CACHE</code> is used only for <a href="/kb/en/myisam/">MyISAM</a> or <a href="/kb/en/aria/">Aria</a> tables. Until <a href="/kb/en/what-is-mariadb-53/">MariaDB 5.3</a>, it was not supported for tables
-having user-defined partitioning, but this limitation was removed in <a href="/kb/en/what-is-mariadb-55/">MariaDB 5.5</a>.</p>
+<code class="fixed" style="white-space:pre-wrap">LOAD INDEX INTO CACHE</code> is used only for <a href="/kb/en/myisam/">MyISAM</a> or <a href="/kb/en/aria/">Aria</a> tables.</p>
 <p>The <code class="fixed" style="white-space:pre-wrap">IGNORE LEAVES</code> modifier causes only blocks for the nonleaf nodes of
 the index to be preloaded.</p>
 
