--- a/Converter/scraped_html/lock-tables.html
+++ b/Converter/scraped_html/lock-tables.html
@@ -251,12 +251,12 @@
         <dt>Created</dt>
         <dd>
 
-<span class="datetime" title="2010-08-16 15:31">11 years, 7 months ago</span></dd>
+<span class="datetime" title="2010-08-16 15:31">11 years, 8 months ago</span></dd>
 
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2021-06-07 10:42">10 months, 1 week ago</span></dd>
+<span class="datetime" title="2022-04-24 13:16">8 hours, 26 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -495,14 +495,14 @@ current session.
 </li><li>When using <code>LOCK TABLES</code> on a <code>TEMPORARY</code> table, it will always be locked with a <code>WRITE</code> lock.
 </li><li>While a connection holds an explicit read lock on a table, it cannot modify it. If you try, the following error will be produced:
 </li></ul>
-<pre class="fixed">ERROR 1099 (HY000): Table 'tab_name' was locked with a READ lock and can't be updated
+<pre class="fixed wrap">ERROR 1099 (HY000): Table 'tab_name' was locked with a READ lock and can't be updated
 </pre><ul start="1"><li>While a connection holds an explicit lock on a table, it cannot access a non-locked table. If you try, the following error will be produced:
 </li></ul>
-<pre class="fixed">ERROR 1100 (HY000): Table 'tab_name' was not locked with LOCK TABLES
+<pre class="fixed wrap">ERROR 1100 (HY000): Table 'tab_name' was not locked with LOCK TABLES
 </pre><ul start="1"><li>While a connection holds an explicit lock on a table, it cannot issue the following: INSERT DELAYED, CREATE TABLE, CREATE TABLE ... LIKE, and DDL statements involving stored programs and views (except for triggers). If you try, the following error will be produced:
 </li></ul>
-<pre class="fixed">ERROR 1192 (HY000): Can't execute the given command because you have active locked tables or an active transaction
-</pre><ul start="1"><li><code>LOCK TABLES</code> can not be used in stored routines - if you try, the following error will be produced on creation:
+<pre class="fixed wrap">ERROR 1192 (HY000): Can't execute the given command because you have active locked tables or an active transaction
+</pre><ul start="1"><li><code>LOCK TABLES</code> can not be used in stored routines - if you try, the following error will be produced on creation. This restriction was removed in <a href="/kb/en/mariadb-1062-release-notes/">MariaDB 10.6.2</a>:
 </li></ul>
 <pre class="fixed">ERROR 1314 (0A000): LOCK is not allowed in stored procedures
 </pre><h2 class="anchored_heading" id="see-also">See Also</h2>
