--- a/Converter/scraped_html/mariadb-error-codes.html
+++ b/Converter/scraped_html/mariadb-error-codes.html
@@ -247,12 +247,12 @@
         <dt>Created</dt>
         <dd>
 
-<span class="datetime" title="2013-07-17 09:24">8 years, 8 months ago</span></dd>
+<span class="datetime" title="2013-07-17 09:24">8 years, 9 months ago</span></dd>
 
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2021-09-27 12:54">6 months, 2 weeks ago</span></dd>
+<span class="datetime" title="2022-04-24 20:57">46 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -1047,7 +1047,7 @@ There are three pieces of information returned in an error:</p>
 <tr><td>1598</td><td>HY000</td><td>ER_BINLOG_LOGGING_IMPOSSIBLE</td><td>Binary logging not possible. Message: %s</td></tr>
 <tr><td>1599</td><td>HY000</td><td>ER_VIEW_NO_CREATION_CTX</td><td>View `%s`.`%s` has no creation context</td></tr>
 </table>
-</div><div class="cstm-style darkheader-nospace-borders"><table><tr><th>Error Code</th><th>SQLSTATE</th><th>Error</th><th>Description</th></tr>
+</div><div class="cstm-style" style="font-size:0.9em;"><div class="cstm-style darkheader-nospace-borders"><table><tr><th>Error Code</th><th>SQLSTATE</th><th>Error</th><th>Description</th></tr>
 <tr><td>1600</td><td>HY000</td><td>ER_VIEW_INVALID_CREATION_CTX</td><td>Creation context of view `%s`.`%s' is invalid</td></tr>
 <tr><td>1601</td><td>HY000</td><td>ER_SR_INVALID_CREATION_CTX</td><td>Creation context of stored routine `%s`.`%s` is invalid</td></tr>
 <tr><td>1602</td><td>HY000</td><td>ER_TRG_CORRUPTED_FILE</td><td>Corrupted TRG file for table `%s`.`%s`</td></tr>
@@ -1149,7 +1149,7 @@ There are three pieces of information returned in an error:</p>
 <tr><td>1698</td><td>28000</td><td>ER_ACCESS_DENIED_NO_PASSWORD_ERROR</td><td>Access denied for user '%s'@'%s'</td></tr>
 <tr><td>1699</td><td>HY000</td><td>ER_SET_PASSWORD_AUTH_PLUGIN</td><td>SET PASSWORD has no significance for users authenticating via plugins</td></tr>
 </table>
-</div><div class="cstm-style darkheader-nospace-borders"><table><tr><th>Error Code</th><th>SQLSTATE</th><th>Error</th><th>Description</th></tr>
+</div></div><div class="cstm-style" style="font-size:0.8em;"><div class="cstm-style darkheader-nospace-borders"><table><tr><th>Error Code</th><th>SQLSTATE</th><th>Error</th><th>Description</th></tr>
 <tr><td>1700</td><td>HY000</td><td>ER_GRANT_PLUGIN_USER_EXISTS</td><td>GRANT with IDENTIFIED WITH is illegal because the user %-.*s already exists</td></tr>
 <tr><td>1701</td><td>42000</td><td>ER_TRUNCATE_ILLEGAL_FK</td><td>Cannot truncate a table referenced in a foreign key constraint (%s)</td></tr>
 <tr><td>1702</td><td>HY000</td><td>ER_PLUGIN_IS_PERMANENT</td><td>Plugin '%s' is force_plus_permanent and can not be unloaded</td></tr>
@@ -1252,7 +1252,7 @@ There are three pieces of information returned in an error:</p>
 <tr><td>1798</td><td>HY000</td><td>ER_INNODB_FT_WRONG_DOCID_INDEX</td><td>Index '%s' is of wrong type for an InnoDB FULLTEXT index</td></tr>
 <tr><td>1799</td><td>HY000</td><td>ER_INNODB_ONLINE_LOG_TOO_BIG</td><td>Creating index '%s' required more than 'innodb_online_alter_log_max_size' bytes of modification log. Please try again.</td></tr>
 </table>
-</div><div class="cstm-style darkheader-nospace-borders"><table><tr><th>Error Code</th><th>SQLSTATE</th><th>Error</th><th>Description</th></tr>
+</div></div><div class="cstm-style darkheader-nospace-borders"><table><tr><th>Error Code</th><th>SQLSTATE</th><th>Error</th><th>Description</th></tr>
 <tr><td>1800</td><td>HY000</td><td>ER_UNKNOWN_ALTER_ALGORITHM</td><td>Unknown ALGORITHM '%s'</td></tr>
 <tr><td>1801</td><td>HY000</td><td>ER_UNKNOWN_ALTER_LOCK</td><td>Unknown LOCK type '%s'</td></tr>
 <tr><td>1802</td><td>HY000</td><td>ER_MTS_CHANGE_MASTER_CANT_RUN_WITH_GAPS</td><td>CHANGE MASTER cannot be executed when the slave was stopped with an error or killed in MTS mode. Consider using RESET SLAVE or START SLAVE UNTIL.</td></tr>
@@ -1336,7 +1336,7 @@ There are three pieces of information returned in an error:</p>
 <tr><td>1880</td><td></td><td>ER_LAST_MYSQL_ERROR_MESSAGE</td><td>"</td></tr>
 </table>
 </div><h2 class="anchored_heading" id="mariadb-specific-error-codes">MariaDB-specific error codes</h2>
-<div class="cstm-style darkheader-nospace-borders"><table><tr><th>Error Code</th><th>SQLSTATE</th><th>Error</th><th>Description</th></tr>
+<div class="cstm-style" style="font-size:0.8em;"><div class="cstm-style darkheader-nospace-borders"><table><tr><th>Error Code</th><th>SQLSTATE</th><th>Error</th><th>Description</th></tr>
 <tr><td>1900</td><td></td><td>ER_UNUSED_18</td><td>"</td></tr>
 <tr><td>1901</td><td></td><td>ER_GENERATED_COLUMN_FUNCTION_IS_NOT_ALLOWED</td><td>Function or expression '%s' cannot be used in the %s clause of %`s</td></tr>
 <tr><td>1902</td><td></td><td>ER_UNUSED_19</td><td>"</td></tr>
@@ -1421,7 +1421,7 @@ There are three pieces of information returned in an error:</p>
 <tr><td>1981</td><td></td><td>ER_WARN_AGGFUNC_DEPENDENCE</td><td>Aggregate function '%-.192s)' of SELECT #%d belongs to SELECT #%d</td></tr>
 <tr><td>1982</td><td></td><td>WARN_INNODB_PARTITION_OPTION_IGNORED</td><td>&lt;%-.64s&gt; option ignored for InnoDB partition</td></tr>
 </table>
-</div><div class="cstm-style darkheader-nospace-borders"><table><tr><th>Error Code</th><th>SQLSTATE</th><th>Error</th><th>Description</th></tr>
+</div></div><div class="cstm-style" style="font-size:0.9em;"><div class="cstm-style darkheader-nospace-borders"><table><tr><th>Error Code</th><th>SQLSTATE</th><th>Error</th><th>Description</th></tr>
 <tr><td>3000</td><td></td><td>ER_FILE_CORRUPT</td><td>File %s is corrupted</td></tr>
 <tr><td>3001</td><td></td><td>ER_ERROR_ON_MASTER</td><td>Query partially completed on the master (error on master: %d) and was aborted. There is a chance that your master is inconsistent at this point. If you are sure that your master is ok, run this query manually on the slave and then restart the slave with SET GLOBAL SQL_SLAVE_SKIP_COUNTER=1; START SLAVE;. Query:'%s'"</td></tr>
 <tr><td>3002</td><td></td><td>ER_INCONSISTENT_ERROR</td><td>Query caused different errors on master and slave. Error on master: message (format)='%s' error code=%d; Error on slave:actual message='%s', error code=%d. Default database:'%s'. Query:'%s'</td></tr>
@@ -1484,7 +1484,9 @@ There are three pieces of information returned in an error:</p>
 <tr><td>3059</td><td></td><td>ER_REPLACE_INACCESSIBLE_ROWS</td><td>REPLACE cannot be executed as it requires deleting rows that are not in the view</td></tr>
 <tr><td>3060</td><td></td><td>ER_ALTER_OPERATION_NOT_SUPPORTED_REASON_GIS</td><td>Do not support online operation on table with GIS index</td></tr>
 </table>
-</div><div class="cstm-style darkheader-nospace-borders"><table><tr><th>Error Code</th><th>SQLSTATE</th><th>Error</th><th>Description</th></tr>
+</div><p>&lt;&lt;/style&gt;&gt;</p>
+<div class="cstm-style 2" style="font-size:0.9em;"><p><span class="cstm-style darkheader-nospace-borders"></span></p>
+<table><tr><th>Error Code</th><th>SQLSTATE</th><th>Error</th><th>Description</th></tr>
 <tr><td>4000</td><td>0A000</td><td>ER_COMMULTI_BADCONTEXT</td><td>COM_MULTI can't return a result set in the given context</td></tr>
 <tr><td>4001</td><td></td><td>ER_BAD_COMMAND_IN_MULTI</td><td>Command '%s' is not allowed for COM_MULTI</td></tr>
 <tr><td>4002</td><td></td><td>ER_WITH_COL_WRONG_LIST</td><td>WITH column list and SELECT field list have different column counts</td></tr>
@@ -1669,7 +1671,7 @@ There are three pieces of information returned in an error:</p>
 <tr><td>4181</td><td></td><td>ER_REMOVED_ORPHAN_TRIGGER</td><td>Dropped orphan trigger '%-.64s', originally created for table: '%-.192s'</td></tr>
 <tr><td>4182</td><td></td><td>ER_STORAGE_ENGINE_DISABLED</td><td>Storage engine %s is disabled</td></tr>
 </table>
-</div>
+</div></div>
     </div>
 
 
