--- a/Converter/scraped_html/performance-schema-status-variables.html
+++ b/Converter/scraped_html/performance-schema-status-variables.html
@@ -264,7 +264,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2020-10-14 13:11">1 year, 6 months ago</span></dd>
+<span class="datetime" title="2022-04-24 18:24">3 hours, 16 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -412,7 +412,7 @@
 
     
     <div class="answer formatted">
-        <div class="table_of_contents well well-small">
+        <div class="cstm-style" style="font-size:0.8em;"><div class="table_of_contents well well-small">
 <h3>Contents</h3>
         <ol class="toc">
 
@@ -479,7 +479,7 @@
  </ol>
 </li>
 </div>
-<p>This page documents status variables related to the <a href="/kb/en/performance-schema/">Performance Schema</a>. See <a href="/kb/en/server-status-variables/">Server Status Variables</a> for a complete list of status variables that can be viewed with <a href="/kb/en/show-status/">SHOW STATUS</a>.</p>
+</div><p>This page documents status variables related to the <a href="/kb/en/performance-schema/">Performance Schema</a>. See <a href="/kb/en/server-status-variables/">Server Status Variables</a> for a complete list of status variables that can be viewed with <a href="/kb/en/show-status/">SHOW STATUS</a>.</p>
 <p>See also the <a href="/kb/en/full-list-of-mariadb-options-system-and-status-variables/">Full list of MariaDB options, system and status variables</a>. </p>
 <h4 class="anchored_heading" id="performance_schema_accounts_lost"><code>Performance_schema_accounts_lost</code></h4>
 <ul start="1"><li><strong>Description:</strong> Number of times a row could not be added to the performance schema accounts table due to it being full. The global value can be flushed by <a href="/kb/en/flush/">FLUSH STATUS</a>.
