--- a/Converter/scraped_html/performance-schema-system-variables.html
+++ b/Converter/scraped_html/performance-schema-system-variables.html
@@ -264,7 +264,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2022-04-06 14:39">6 days, 3 hours ago</span></dd>
+<span class="datetime" title="2022-04-24 18:26">3 hours, 13 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -412,7 +412,7 @@
 
     
     <div class="answer formatted">
-        <div class="table_of_contents well well-small">
+        <div class="cstm-style" style="font-size:0.7em;"><div class="table_of_contents well well-small">
 <h3>Contents</h3>
         <ol class="toc">
 
@@ -502,8 +502,8 @@
     </ol>
  </ol>
 </li>
-</div><p>
-The following variables are used with MariaDB's <a href="/kb/en/performance-schema/">Performance Schema</a>. See <a href="/kb/en/mysqld-options/#performance-schema-options">Performance Schema Options</a> for Performance Schema options that are not system variables. See <a href="/kb/en/server-system-variables/">Server System Variables</a> for a complete list of system variables and instructions on setting them.</p>
+</div>
+</div><p>The following variables are used with MariaDB's <a href="/kb/en/performance-schema/">Performance Schema</a>. See <a href="/kb/en/mysqld-options/#performance-schema-options">Performance Schema Options</a> for Performance Schema options that are not system variables. See <a href="/kb/en/server-system-variables/">Server System Variables</a> for a complete list of system variables and instructions on setting them.</p>
 <p>See also the <a href="/kb/en/full-list-of-mariadb-options-system-and-status-variables/">Full list of MariaDB options, system and status variables</a>. </p>
 <h4 class="anchored_heading" id="performance_schema"><code>performance_schema</code></h4>
 <ul start="1"><li><strong>Description:</strong> If set to <code>1</code> (<code>0</code> is default), enables the Performance Schema
