--- a/Converter/scraped_html/show-binlog-events.html
+++ b/Converter/scraped_html/show-binlog-events.html
@@ -255,12 +255,12 @@
         <dt>Created</dt>
         <dd>
 
-<span class="datetime" title="2010-08-23 15:47">11 years, 7 months ago</span></dd>
+<span class="datetime" title="2010-08-23 15:47">11 years, 8 months ago</span></dd>
 
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2020-09-29 13:14">1 year, 6 months ago</span></dd>
+<span class="datetime" title="2022-04-24 13:55">7 hours, 41 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -430,7 +430,7 @@
 the first binary log is displayed.</p>
 <p>Requires the <a href="/kb/en/grant/#binlog-monitor">BINLOG MONITOR</a> privilege (&gt;= <a href="/kb/en/mariadb-1052-release-notes/">MariaDB 10.5.2</a>) or the <a href="/kb/en/grant/#replication-slave">REPLICATION SLAVE</a> privilege (&lt;= <a href="/kb/en/mariadb-1051-release-notes/">MariaDB 10.5.1</a>).</p>
 <h2 class="anchored_heading" id="example">Example</h2>
-<pre class="fixed">SHOW BINLOG EVENTS IN 'mysql_sandbox10019-bin.000002';
+<pre class="fixed wrap">SHOW BINLOG EVENTS IN 'mysql_sandbox10019-bin.000002';
 +-------------------------------+-----+-------------------+-----------+-------------+------------------------------------------------+
 | Log_name                      | Pos | Event_type        | Server_id | End_log_pos | Info                                           |
 +-------------------------------+-----+-------------------+-----------+-------------+------------------------------------------------+
