--- a/Converter/scraped_html/show-privileges.html
+++ b/Converter/scraped_html/show-privileges.html
@@ -255,12 +255,12 @@
         <dt>Created</dt>
         <dd>
 
-<span class="datetime" title="2010-08-23 17:22">11 years, 7 months ago</span></dd>
+<span class="datetime" title="2010-08-23 17:22">11 years, 8 months ago</span></dd>
 
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2021-02-24 08:42">1 year, 1 month ago</span></dd>
+<span class="datetime" title="2022-04-24 14:09">7 hours, 29 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -413,7 +413,7 @@
 <p>Note that before <a href="/kb/en/mariadb-10323-release-notes/">MariaDB 10.3.23</a>, <a href="/kb/en/mariadb-10413-release-notes/">MariaDB 10.4.13</a> and <a href="/kb/en/mariadb-1052-release-notes/">MariaDB 10.5.2</a> , the <a href="/kb/en/grant/#table-privileges">Delete history</a> privilege displays as <code>Delete versioning rows</code> (<a href="https://jira.mariadb.org/browse/MDEV-20382">MDEV-20382</a>).</p>
 <h2 class="anchored_heading" id="example">Example</h2>
 <p>From <a href="/kb/en/mariadb-1059-release-notes/">MariaDB 10.5.9</a></p>
-<pre class="fixed">SHOW PRIVILEGES;
+<pre class="fixed wrap">SHOW PRIVILEGES;
 +--------------------------+---------------------------------------+--------------------------------------------------------------------+
 | Privilege                | Context                               | Comment                                                            |
 +--------------------------+---------------------------------------+--------------------------------------------------------------------+
