--- a/Converter/scraped_html/start-replica.html
+++ b/Converter/scraped_html/start-replica.html
@@ -260,7 +260,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2021-09-17 13:18">6 months, 3 weeks ago</span></dd>
+<span class="datetime" title="2022-04-24 13:43">7 hours, 52 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -445,7 +445,7 @@
         <div class="cstm-style bluebox text"><p>The terms <em>master</em> and <em>slave</em> have historically been used in replication, but the terms terms <em>primary</em> and <em>replica</em> are now preferred. The old terms are used still used in parts of the documentation, and in MariaDB commands, although <a href="/kb/en/what-is-mariadb-105/">MariaDB 10.5</a> has begun the process of renaming. The documentation process is ongoing. See <a href="https://jira.mariadb.org/browse/MDEV-18777">MDEV-18777</a> to follow progress on this effort.</p>
 </div>
 <h2 class="anchored_heading" id="syntax">Syntax</h2>
-<pre class="fixed">START SLAVE [&#34;connection_name&#34;] [thread_type [, thread_type] ... ] [FOR CHANNEL &#34;connection_name&#34;]
+<pre class="fixed wrap">START SLAVE [&#34;connection_name&#34;] [thread_type [, thread_type] ... ] [FOR CHANNEL &#34;connection_name&#34;]
 START SLAVE [&#34;connection_name&#34;] [SQL_THREAD] UNTIL                
     MASTER_LOG_FILE = 'log_name', MASTER_LOG_POS = log_pos [FOR CHANNEL &#34;connection_name&#34;]
 START SLAVE [&#34;connection_name&#34;] [SQL_THREAD] UNTIL
@@ -616,7 +616,7 @@ using the channel_name directly after <code>START SLAVE</code>.</p>
                     <li>
                         <a href="/kb/en/reset-replica/">
                             
-                            RESET SLAVE
+                            RESET REPLICA/SLAVE
                         </a>
                     </li>
                 
