--- a/Converter/static_HTML/boilerplate.html
+++ b/Converter/static_HTML/boilerplate.html
@@ -32,13 +32,8 @@
                 z-index: -1;
                 border-top: 2px dotted black;
             }
-    
-            a[href ^= "http"]:after {
-                content: " " url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAVklEQVR4Xn3PgQkAMQhDUXfqTu7kTtkpd5RA8AInfArtQ2iRXFWT2QedAfttj2FsPIOE1eCOlEuoWWjgzYaB/IkeGOrxXhqB+uA9Bfcm0lAZuh+YIeAD+cAqSz4kCMUAAAAASUVORK5CYII=);    
-            }
-            a[class=""]:after {
-                content: ""
-            }   
+            
+            /*mark-external-links*/
         </style>
     </head>
     <body class = "mpkb nodes products nodes_view jqui">
