--- a/Converter/scraped_html/backup-stage.html
+++ b/Converter/scraped_html/backup-stage.html
@@ -260,7 +260,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2021-10-19 18:26">5 months, 3 weeks ago</span></dd>
+<span class="datetime" title="2022-04-24 12:59">8 hours, 36 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -454,7 +454,7 @@
 </div>
 <p>The <code>BACKUP STAGE</code> commands are a set of commands to make it possible to make an efficient external backup tool.  </p>
 <h2 class="anchored_heading" id="syntax">Syntax</h2>
-<pre class="fixed">BACKUP STAGE [START | FLUSH | BLOCK_DDL | BLOCK_COMMIT | END ]
+<pre class="fixed wrap">BACKUP STAGE [START | FLUSH | BLOCK_DDL | BLOCK_COMMIT | END ]
 </pre><p>In the following text, a transactional table means InnoDB or "InnoDB-like engine with redo log that can lock redo purges and can be copied without locks by an outside process".</p>
 <h2 class="anchored_heading" id="goals-with-backup-stage-commands">Goals with BACKUP STAGE Commands</h2>
 <ul start="1"><li>To be able to do a majority of the backup with the minimum possible server locks. Especially for transactional tables (InnoDB, MyRocks etc) there is only need for a very short block of new commits while copying statistics and log tables.
@@ -499,15 +499,15 @@
 <h2 class="anchored_heading" id="using-backup-stage-commands-with-backup-tools">Using <code>BACKUP STAGE</code> Commands with Backup Tools</h2>
 <h3 class="anchored_heading" id="using-backup-stage-commands-with-mariabackup">Using <code>BACKUP STAGE</code> Commands with Mariabackup</h3>
 <p>The <code>BACKUP STAGE</code> commands are a set of commands to make it possible to make an efficient external backup tool. How <a href="/kb/en/mariabackup/">Mariabackup</a> uses these commands depends on whether you are using the version that is bundled with MariaDB Community Server or the version that is bundled with <a href="https://mariadb.com/docs/products/mariadb-enterprise-server/">MariaDB Enterprise Server</a>. See <a href="/kb/en/mariabackup-and-backup-stage-commands/">Mariabackup and BACKUP STAGE Commands</a> for some examples on how <a href="/kb/en/mariabackup/">Mariabackup</a> uses these commands.</p>
-<div class="cstm-style greenbox"><p>If you would like to use a version of <a href="/kb/en/mariabackup/">Mariabackup</a> that uses the <code><a href="/kb/en/backup-stage/">BACKUP STAGE</a></code> commands in an efficient way, then one option is to use <a href="https://mariadb.com/docs/usage/mariadb-enterprise-backup/">MariaDB Enterprise Backup</a> that is bundled with <a href="https://mariadb.com/docs/products/mariadb-enterprise-server/">MariaDB Enterprise Server</a>.</p>
+<div class="cstm-style greenbox"><p>If you would like to use a version of <a href="/kb/en/mariabackup/">Mariabackup</a> that uses the <a href="/kb/en/backup-stage/">BACKUP STAGE</a> commands in an efficient way, then one option is to use <a href="https://mariadb.com/docs/usage/mariadb-enterprise-backup/">MariaDB Enterprise Backup</a> that is bundled with <a href="https://mariadb.com/docs/products/mariadb-enterprise-server/">MariaDB Enterprise Server</a>.</p>
 </div><h3 class="anchored_heading" id="using-backup-stage-commands-with-storage-snapshots">Using <code>BACKUP STAGE</code> Commands with Storage Snapshots</h3>
 <p>The <code>BACKUP STAGE</code> commands are a set of commands to make it possible to make an efficient external backup tool. These commands could even be used by tools that perform backups by taking a snapshot of a file system, SAN, or some other kind of storage device. See <a href="/kb/en/storage-snapshots-and-backup-stage-commands/">Storage Snapshots and BACKUP STAGE Commands</a> for some examples on how to use each <code>BACKUP STAGE</code> command in an efficient way.</p>
 <h2 class="anchored_heading" id="privileges">Privileges</h2>
-<p><code>BACKUP STAGE</code> requires the <code><a href="/kb/en/grant/">RELOAD</a></code> privilege.</p>
+<p><code>BACKUP STAGE</code> requires the <a href="/kb/en/grant/">RELOAD</a> privilege.</p>
 <h2 class="anchored_heading" id="notes">Notes</h2>
 <ul start="1"><li>Only one connection can run <code>BACKUP STAGE START</code>. If a second connection tries, it will wait until the first one has executed <code>BACKUP STAGE END</code>.
 </li><li>If the user skips a <code>BACKUP STAGE</code>, then all intermediate backup stages will automatically be run. This will allow us to add new stages within the <code>BACKUP STAGE</code> hierarchy in the future with even more precise locks without causing problems for tools using an earlier version of the <code>BACKUP STAGE</code> implementation.
-</li><li>One can use the <code><a href="/kb/en/server-system-variables/#max_statement_time">max_statement_time</a></code> or <code><a href="/kb/en/server-system-variables/#lock_wait_timeout">lock_wait_timeout</a></code> system variables to ensure that a <code>BACKUP STAGE</code> command doesn't block the server too long.
+</li><li>One can use the <a href="/kb/en/server-system-variables/#max_statement_time">max_statement_time</a> or <a href="/kb/en/server-system-variables/#lock_wait_timeout">lock_wait_timeout</a> system variables to ensure that a <code>BACKUP STAGE</code> command doesn't block the server too long.
 </li><li>DDL logging will only be available in <a href="https://mariadb.com/docs/products/mariadb-enterprise-server/">MariaDB Enterprise Server</a> 10.2 and later.
 </li></ul>
 <h2 class="anchored_heading" id="see-also">See Also</h2>
