--- a/Converter/scraped_html/comment-syntax.html
+++ b/Converter/scraped_html/comment-syntax.html
@@ -247,12 +247,12 @@
         <dt>Created</dt>
         <dd>
 
-<span class="datetime" title="2011-08-17 18:31">10 years, 7 months ago</span></dd>
+<span class="datetime" title="2011-08-17 18:31">10 years, 8 months ago</span></dd>
 
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2021-09-07 09:54">7 months, 1 week ago</span></dd>
+<span class="datetime" title="2022-04-24 20:47">55 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -448,7 +448,7 @@ In MariaDB, the last 2 queries would return 3.</p>
 <span class="k">SELECT</span> <span class="mi">2</span> <span class="cm">/*M! +1 */</span><span class="p">;</span>
 <span class="k">SELECT</span> <span class="mi">2</span> <span class="cm">/*M!50301 +1 */</span><span class="p">;</span>
 </pre><p>The following executable statement will not work due to the delimiter inside the executable portion:</p>
-<pre class="fixed"><span class="cm">/*M!100100 select 1 ; */</span>
+<pre class="fixed wrap"><span class="cm">/*M!100100 select 1 ; */</span>
 <span class="n">ERROR</span> <span class="mi">1064</span> <span class="p">(</span><span class="mi">42000</span><span class="p">):</span> <span class="n">You</span> <span class="n">have</span> <span class="n">an</span> <span class="n">error</span> <span class="k">in</span> <span class="n">your</span> <span class="k">SQL</span> <span class="n">syntax</span><span class="p">;</span> <span class="k">check</span> <span class="n">the</span> <span class="n">manual</span> <span class="n">that</span> <span class="n">corresponds</span> <span class="k">to</span> <span class="n">your</span> <span class="n">MariaDB</span> <span class="n">server</span> <span class="k">version</span> <span class="k">for</span> <span class="n">the</span> <span class="k">right</span> <span class="n">syntax</span> <span class="k">to</span> <span class="n">use</span> <span class="n">near</span> <span class="s1">&#39;&#39;</span> <span class="k">at</span> <span class="n">line</span> <span class="mi">1</span>
 </pre><p>Instead, the delimiter should be placed outside the executable portion:</p>
 <pre class="fixed"><span class="cm">/*M!100100 select 1 */</span><span class="p">;</span>
