--- a/Converter/scraped_html/dynamic-columns-from-mariadb-10.html
+++ b/Converter/scraped_html/dynamic-columns-from-mariadb-10.html
@@ -252,7 +252,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2020-07-15 12:53">1 year, 9 months ago</span></dd>
+<span class="datetime" title="2022-04-24 12:23">9 hours, 19 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -451,7 +451,7 @@
 <p>It is possible to refer to column by names. Names can be used everywhere where in <a href="/kb/en/what-is-mariadb-53/">MariaDB 5.3</a> one could use only strings:</p>
 <ul start="1"><li>Create a dynamic column blob:
 </li></ul>
-<pre class="fixed indent1"><span class="n">COLUMN_CREATE</span><span class="p">(</span><span class="s1">&#39;int_col&#39;</span><span class="p">,</span> <span class="mi">123</span> <span class="k">as</span> <span class="nb">int</span><span class="p">,</span> <span class="s1">&#39;double_col&#39;</span><span class="p">,</span> <span class="mi">3</span><span class="p">.</span><span class="mi">14</span> <span class="k">as</span> <span class="n">double</span><span class="p">,</span> <span class="s1">&#39;string_col&#39;</span><span class="p">,</span> <span class="s1">&#39;text-data&#39;</span> <span class="k">as</span> <span class="nb">char</span><span class="p">);</span>
+<pre class="fixed indent1 wrap"><span class="n">COLUMN_CREATE</span><span class="p">(</span><span class="s1">&#39;int_col&#39;</span><span class="p">,</span> <span class="mi">123</span> <span class="k">as</span> <span class="nb">int</span><span class="p">,</span> <span class="s1">&#39;double_col&#39;</span><span class="p">,</span> <span class="mi">3</span><span class="p">.</span><span class="mi">14</span> <span class="k">as</span> <span class="n">double</span><span class="p">,</span> <span class="s1">&#39;string_col&#39;</span><span class="p">,</span> <span class="s1">&#39;text-data&#39;</span> <span class="k">as</span> <span class="nb">char</span><span class="p">);</span>
 </pre><ul start="1"><li>Set a column value:
 </li></ul>
 <pre class="fixed indent1"><span class="n">COLUMN_ADD</span><span class="p">(</span><span class="n">dyncol_blob</span><span class="p">,</span> <span class="s1">&#39;intcol&#39;</span><span class="p">,</span> <span class="mi">1234</span><span class="p">);</span>
@@ -513,12 +513,12 @@ internal structures which might not be found by other functions.</p>
 <span class="o">+</span><span class="c1">-----------------------------+</span>
 </pre><h3 class="anchored_heading" id="column_json">COLUMN_JSON</h3>
 <p><a href="column-json">COLUMN_JSON</a> converts all dynamic column record content to a JSON object.</p>
-<pre class="fixed"><span class="k">select</span> <span class="n">column_json</span><span class="p">(</span><span class="n">column_create</span><span class="p">(</span><span class="s1">&#39;column1&#39;</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="s1">&#39;column2&#39;</span><span class="p">,</span> <span class="ss">&quot;two&quot;</span><span class="p">));</span>
-<span class="o">+</span><span class="c1">------------------------------------------------------------+</span>
-<span class="o">|</span> <span class="n">column_json</span><span class="p">(</span><span class="n">column_create</span><span class="p">(</span><span class="s1">&#39;column1&#39;</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="s1">&#39;column2&#39;</span><span class="p">,</span> <span class="ss">&quot;two&quot;</span><span class="p">))</span> <span class="o">|</span>
-<span class="o">+</span><span class="c1">------------------------------------------------------------+</span>
-<span class="o">|</span> <span class="err">{</span><span class="ss">&quot;column1&quot;</span><span class="p">:</span><span class="mi">1</span><span class="p">,</span><span class="ss">&quot;column2&quot;</span><span class="p">:</span><span class="ss">&quot;two&quot;</span><span class="err">}</span>                              <span class="o">|</span>
-<span class="o">+</span><span class="c1">------------------------------------------------------------+</span>
+<pre class="fixed">select column_json(column_create('column1', 1, 'column2', &#34;two&#34;));
++------------------------------------------------------------+
+| column_json(column_create('column1', 1, 'column2', &#34;two&#34;)) |
++------------------------------------------------------------+
+| {&#34;column1&#34;:1,&#34;column2&#34;:&#34;two&#34;}                              |
++------------------------------------------------------------+
 </pre><h2 class="anchored_heading" id="other-changes">Other Changes</h2>
 <ul start="1"><li>All API functions has prefix mariadb_dyncol_ (old prefix dynamic_column_ is depricated
 </li><li>API changed to be able to work with the new format (*_named functions).
