--- a/Converter/scraped_html/flush-tables-for-export.html
+++ b/Converter/scraped_html/flush-tables-for-export.html
@@ -260,7 +260,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2020-09-03 23:41">1 year, 7 months ago</span></dd>
+<span class="datetime" title="2022-04-24 13:27">8 hours, 8 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -423,7 +423,7 @@
 </div>
 <h2 class="anchored_heading" id="description">Description</h2>
 <p><code>FLUSH TABLES ... FOR EXPORT</code> flushes changes to the specified tables to disk so that binary copies can be made while the server is still running. This works for <a href="/kb/en/archive/">Archive</a>, <a href="/kb/en/aria/">Aria</a>, <a href="/kb/en/csv/">CSV</a>, <a href="/kb/en/innodb/">InnoDB</a>, <a href="/kb/en/myisam/">MyISAM</a>, <a href="/kb/en/merge/">MERGE</a>, and <a href="/kb/en/xtradb/">XtraDB</a> tables.</p>
-<p>The table is read locked until one has issued <a href="/kb/en/lock-tables-and-unlock-tables/">UNLOCK TABLES</a>.</p>
+<p>The table is read locked until one has issued <a href="/kb/en/transactions-unlock-tables/">UNLOCK TABLES</a>.</p>
 <p>If a storage engine does not support <code>FLUSH TABLES FOR EXPORT</code>, a 1031 error (<a href="/kb/en/sqlstate/">SQLSTATE</a> 'HY000') is produced.</p>
 <p>If <code>FLUSH TABLES ... FOR EXPORT</code> is in effect in the session, the following statements will produce an error if attempted:</p>
 <ul start="1"><li><code>FLUSH TABLES WITH READ LOCK</code>
