--- a/Converter/scraped_html/flush.html
+++ b/Converter/scraped_html/flush.html
@@ -255,12 +255,12 @@
         <dt>Created</dt>
         <dd>
 
-<span class="datetime" title="2010-08-16 15:34">11 years, 7 months ago</span></dd>
+<span class="datetime" title="2010-08-16 15:34">11 years, 8 months ago</span></dd>
 
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2022-03-23 16:45">2 weeks, 6 days ago</span></dd>
+<span class="datetime" title="2022-04-24 13:18">8 hours, 16 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -499,11 +499,11 @@ privilege. See <a href="/kb/en/grant/">GRANT</a>.</p>
 <a href="/kb/en/reset/">RESET</a>.</p>
 <p>You cannot issue a FLUSH statement from within a <a href="/kb/en/stored-functions/">stored function</a> or a <a href="/kb/en/triggers/">trigger</a>. Doing so within a stored procedure is permitted, as long as it is not called by a stored function or trigger. See <a href="/kb/en/stored-routine-limitations/">Stored Routine Limitations</a>, <a href="/kb/en/stored-function-limitations/">Stored Function Limitations</a> and <a href="/kb/en/trigger-limitations/">Trigger Limitations</a>.</p>
 <p>If a listed table is a view, an error like the following will be produced:</p>
-<pre class="fixed">ERROR 1347 (HY000): 'test.v' is not BASE TABLE
+<pre class="fixed wrap">ERROR 1347 (HY000): 'test.v' is not BASE TABLE
 </pre><p>By default, <code>FLUSH</code> statements are written to the <a href="/kb/en/binary-log/">binary log</a> and will be <a href="/kb/en/replication/">replicated</a>. The <code>NO_WRITE_TO_BINLOG</code> keyword (<code>LOCAL</code> is an alias) will ensure the statement is not written to the binary log. </p>
 <p>The different flush options are:</p>
 <div class="cstm-style darkheader-nospace-borders"><table><tr><th>Option</th><th>Description</th></tr>
-<tr><td><code>CHANGED_PAGE_BITMAPS</code></td><td>Internal command used for backup purposes. See the <a href="/kb/en/information-schema-changed_page_bitmaps-table/">Information Schema CHANGED_PAGE_BITMAPS Table</a>.</td></tr>
+<tr><td><code>CHANGED_PAGE_BITMAPS</code></td><td><a href="/kb/en/about-xtradb/">XtraDB</a> only. Internal command used for backup purposes. See the <a href="/kb/en/information-schema-changed_page_bitmaps-table/">Information Schema CHANGED_PAGE_BITMAPS Table</a>.</td></tr>
 <tr><td><code>CLIENT_STATISTICS</code></td><td>Reset client statistics (see <a href="/kb/en/show-client-statistics/">SHOW CLIENT_STATISTICS</a>).</td></tr>
 <tr><td><code>DES_KEY_FILE</code></td><td>Reloads the DES key file (Specified with the <a href="/kb/en/mysqld-options-full-list/">--des-key-file startup option</a>).</td></tr>
 <tr><td><code>HOSTS</code></td><td>Flush the hostname cache (used for converting ip to host names and for unblocking blocked hosts. See <a href="/kb/en/server-system-variables/#max_connect_errors">max_connect_errors</a>)</td></tr>
@@ -519,7 +519,7 @@ privilege. See <a href="/kb/en/grant/">GRANT</a>.</p>
 <tr><td><code>TABLE</code></td><td>Close tables given as options or all open tables if no table list was used. From <a href="/kb/en/mariadb-1041-release-notes/">MariaDB 10.4.1</a>, using without any table list will only close tables not in use, and tables not locked by the FLUSH TABLES connection. If there are no locked tables, FLUSH TABLES will be instant and will not cause any waits, as it no longer waits for tables in use. When a table list is provided, from <a href="/kb/en/mariadb-1041-release-notes/">MariaDB 10.4.1</a>, the server will wait for the end of any transactions that are using the tables. Previously, FLUSH TABLES only waited for the statements to complete.</td></tr>
 <tr><td><code>TABLES</code></td><td>Same as <code>FLUSH TABLE</code>.</td></tr>
 <tr><td><code><a href="/kb/en/flush-tables-for-export/">TABLES ... FOR EXPORT</a></code></td><td>For InnoDB tables, flushes table changes to disk to permit binary table copies while the server is running. See <a href="/kb/en/flush-tables-for-export/">FLUSH TABLES ... FOR EXPORT</a> for more.</td></tr>
-<tr><td><code>TABLES WITH READ LOCK</code></td><td>Closes all open tables. New tables are only allowed to be opened with read locks until an <a href="/kb/en/transactions-lock/">UNLOCK TABLES</a> is given.</td></tr>
+<tr><td><code>TABLES WITH READ LOCK</code></td><td>Closes all open tables. New tables are only allowed to be opened with read locks until an <a href="/kb/en/transactions-unlock-tables/">UNLOCK TABLES</a> is given.</td></tr>
 <tr><td><code>TABLES WITH READ LOCK AND DISABLE CHECKPOINT</code></td><td>As <code>TABLES WITH READ LOCK</code> but also disable all checkpoint writes by transactional table engines. This is useful when doing a disk snapshot of all tables.</td></tr>
 <tr><td><code>TABLE_STATISTICS</code></td><td>Reset table statistics (see <a href="/kb/en/show-table-statistics/">SHOW TABLE_STATISTICS</a>).</td></tr>
 <tr><td><code>USER_RESOURCES</code></td><td>Resets all per hour <a href="/kb/en/grant/#setting-per-account-resources-limits">user resources</a>. This enables clients that have exhausted their resources to connect again.</td></tr>
@@ -672,16 +672,16 @@ to instead use meta data locks.</p>
 </li></ul>
 <p>This is basically the same behavior as in old MariaDB version if one first lock the tables, then do
 <code>FLUSH TABLES</code>.  The tables will be copyable until <code>UNLOCK TABLES</code>.</p>
-<h2 class="anchored_heading" id="flush-ssl"><code>FLUSH SSL</code></h2>
+<h2 class="anchored_heading" id="flush-ssl">FLUSH SSL</h2>
 <div class="mariadb_from_10_4 mariadb from_10_4 product"><h5 class="product_title">MariaDB starting with <a href="/kb/en/what-is-mariadb-104/">10.4</a></h5><p>The <code>FLUSH SSL</code> command was first added in <a href="/kb/en/what-is-mariadb-104/">MariaDB 10.4</a>.</p>
 </div><p>In <a href="/kb/en/what-is-mariadb-104/">MariaDB 10.4</a> and later, the <code>FLUSH SSL</code> command can be used to dynamically reinitialize the server's <a href="/kb/en/data-in-transit-encryption/">TLS</a> context. This is most useful if you need to replace a certificate that is about to expire without restarting the server.</p>
 <p>This operation is performed by reloading the files defined by the following <a href="/kb/en/ssltls-system-variables/">TLS system variables</a>:</p>
-<ul start="1"><li><code><a href="/kb/en/ssltls-system-variables/#ssl_cert">ssl_cert</a></code>
-</li><li><code><a href="/kb/en/ssltls-system-variables/#ssl_key">ssl_key</a></code>
-</li><li><code><a href="/kb/en/ssltls-system-variables/#ssl_ca">ssl_ca</a></code>
-</li><li><code><a href="/kb/en/ssltls-system-variables/#ssl_capath">ssl_capath</a></code>
-</li><li><code><a href="/kb/en/ssltls-system-variables/#ssl_crl">ssl_crl</a></code>
-</li><li><code><a href="/kb/en/ssltls-system-variables/#ssl_crlpath">ssl_crlpath</a></code>
+<ul start="1"><li><a href="/kb/en/ssltls-system-variables/#ssl_cert">ssl_cert</a>
+</li><li><a href="/kb/en/ssltls-system-variables/#ssl_key">ssl_key</a>
+</li><li><a href="/kb/en/ssltls-system-variables/#ssl_ca">ssl_ca</a>
+</li><li><a href="/kb/en/ssltls-system-variables/#ssl_capath">ssl_capath</a>
+</li><li><a href="/kb/en/ssltls-system-variables/#ssl_crl">ssl_crl</a>
+</li><li><a href="/kb/en/ssltls-system-variables/#ssl_crlpath">ssl_crlpath</a>
 </li></ul>
 <p>These <a href="/kb/en/ssltls-system-variables/">TLS system variables</a> are not dynamic, so their values can <strong>not</strong> be changed without restarting the server.</p>
 <p>If you want to dynamically reinitialize the server's <a href="/kb/en/data-in-transit-encryption/">TLS</a> context, then you need to change the certificate and key files at the relevant paths defined by these <a href="/kb/en/ssltls-system-variables/">TLS system variables</a>, without actually changing the values of the variables. See <a href="https://jira.mariadb.org/browse/MDEV-19341">MDEV-19341</a> for more information.</p>
