--- a/Converter/scraped_html/information-schema-locales-table.html
+++ b/Converter/scraped_html/information-schema-locales-table.html
@@ -263,12 +263,12 @@
         <dt>Created</dt>
         <dd>
 
-<span class="datetime" title="2014-04-15 11:07">7 years, 12 months ago</span></dd>
+<span class="datetime" title="2014-04-15 11:07">8 years ago</span></dd>
 
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2020-06-26 11:13">1 year, 9 months ago</span></dd>
+<span class="datetime" title="2022-04-24 18:02">3 hours, 36 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -414,9 +414,9 @@
 <tr><td><code>ERROR_MESSAGE_LANGUAGE</code></td><td>Error message language.</td></tr>
 </table>
 </div><p>The table is not a standard Information Schema table, and is a MariaDB extension.</p>
-<p>The <code><a href="/kb/en/show-locales/">SHOW LOCALES</a></code> statement returns a subset of the information.</p>
+<p>The <a href="/kb/en/show-locales/">SHOW LOCALES</a> statement returns a subset of the information.</p>
 <h2 class="anchored_heading" id="example">Example</h2>
-<div class="cstm-style" style="font-size:0.8em;"><pre class="fixed">SELECT * FROM information_schema.LOCALES;
+<div class="cstm-style" style="font-size:0.8em;"><pre class="fixed wrap">SELECT * FROM information_schema.LOCALES;
 +-----+-------+-------------------------------------+-----------------------+---------------------+---------------+--------------+------------------------+
 | ID  | NAME  | DESCRIPTION                         | MAX_MONTH_NAME_LENGTH | MAX_DAY_NAME_LENGTH | DECIMAL_POINT | THOUSAND_SEP | ERROR_MESSAGE_LANGUAGE |
 +-----+-------+-------------------------------------+-----------------------+---------------------+---------------+--------------+------------------------+
