--- a/Converter/scraped_html/information-schema-metadata_lock_info-table.html
+++ b/Converter/scraped_html/information-schema-metadata_lock_info-table.html
@@ -263,12 +263,12 @@
         <dt>Created</dt>
         <dd>
 
-<span class="datetime" title="2014-01-13 07:22">8 years, 2 months ago</span></dd>
+<span class="datetime" title="2014-01-13 07:22">8 years, 3 months ago</span></dd>
 
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2020-10-19 09:39">1 year, 5 months ago</span></dd>
+<span class="datetime" title="2022-04-24 18:05">3 hours, 34 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -452,7 +452,7 @@ LOCK_DURATION: MDL_TRANSACTION
     LOCK_TYPE: Table metadata lock
  TABLE_SCHEMA: test
    TABLE_NAME: t
-</pre><pre class="fixed"><span class="k">SELECT</span> <span class="o">*</span> <span class="k">FROM</span> <span class="n">information_schema</span><span class="p">.</span><span class="n">METADATA_LOCK_INFO</span><span class="p">;</span>
+</pre><div class="cstm-style" style="font-size:0.8em;"><pre class="fixed wrap"><span class="k">SELECT</span> <span class="o">*</span> <span class="k">FROM</span> <span class="n">information_schema</span><span class="p">.</span><span class="n">METADATA_LOCK_INFO</span><span class="p">;</span>
 <span class="o">+</span><span class="c1">-----------+--------------------------+---------------+----------------------+-----------------+-------------+</span>
 <span class="o">|</span> <span class="n">THREAD_ID</span> <span class="o">|</span> <span class="n">LOCK_MODE</span> <span class="o">|</span> <span class="n">LOCK_DURATION</span> <span class="o">|</span> <span class="n">LOCK_TYPE</span> <span class="o">|</span> <span class="n">TABLE_SCHEMA</span> <span class="o">|</span> <span class="k">TABLE_NAME</span> <span class="o">|</span>
 <span class="o">+</span><span class="c1">-----------+--------------------------+---------------+----------------------+-----------------+-------------+ </span>
@@ -461,7 +461,7 @@ LOCK_DURATION: MDL_TRANSACTION
 <span class="o">|</span> <span class="mi">31</span> <span class="o">|</span> <span class="n">MDL_INTENTION_EXCLUSIVE</span> <span class="o">|</span> <span class="n">MDL_EXPLICIT</span> <span class="o">|</span> <span class="k">Schema</span> <span class="n">metadata</span> <span class="k">lock</span> <span class="o">|</span> <span class="n">dbname</span> <span class="o">|</span> <span class="o">|</span>
 <span class="o">|</span> <span class="mi">31</span> <span class="o">|</span> <span class="n">MDL_SHARED_NO_READ_WRITE</span> <span class="o">|</span> <span class="n">MDL_EXPLICIT</span> <span class="o">|</span> <span class="k">Table</span> <span class="n">metadata</span> <span class="k">lock</span> <span class="o">|</span> <span class="n">dbname</span> <span class="o">|</span> <span class="n">exotics</span> <span class="o">|</span>
 <span class="o">+</span><span class="c1">-----------+--------------------------+---------------+----------------------+-----------------+-------------+</span>
-</pre><h2 class="anchored_heading" id="see-also">See also</h2>
+</pre></div><h2 class="anchored_heading" id="see-also">See Also</h2>
 <ul start="1"><li><a href="/kb/en/metadata-locking/">metadata locks</a> 
 </li><li><a href="/kb/en/performance-schema-metadata_locks-table/">Performance Schema metadata_locks table</a>
 </li><li><a href="/kb/en/get_lock/">GET_LOCK</a>).</li></ul>
