--- a/Converter/scraped_html/information-schema-views-table.html
+++ b/Converter/scraped_html/information-schema-views-table.html
@@ -23,9 +23,9 @@
     <meta property="og:image" content="http://mariadb.comaskmonty-logo.png" />
     <meta property="og:site_name" content="MariaDB KnowledgeBase" />
     <meta property="fb:admins" content="514852603" />
-    <meta property="og:description" content="Information about views" />
+    <meta property="og:description" content="Information about views." />
 
-    <meta name="description" content="Information about views" />
+    <meta name="description" content="Information about views." />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"/>
@@ -248,7 +248,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2017-11-19 03:43">4 years, 4 months ago</span></dd>
+<span class="datetime" title="2022-04-24 18:13">3 hours, 26 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -398,21 +398,21 @@
     <div class="answer formatted">
         <p>The <a href="/kb/en/information_schema/">Information Schema</a> <code>VIEWS</code> table contains information about <a href="/kb/en/views/">views</a>. The <code>SHOW VIEW</code> <a href="/kb/en/grant/">privilege</a> is required to view the table.</p>
 <p>It has the following columns:</p>
-<div class="cstm-style darkheader-nospace-borders"><table><tr><th>Column</th><th>Description</th><th>Added</th></tr>
+<div class="cstm-style darkheader-nospace-borders"><table><tr><th>Column</th><th>Description</th></tr>
 <tr><td><code>TABLE_CATALOG</code></td><td>Aways <code>def</code>.</td></tr>
-<tr><td><code>TABLE_SCHEMA</code></td><td>Database name containing the view.</td><td></td></tr>
-<tr><td><code>TABLE_NAME</code></td><td>View table name.</td><td></td></tr>
-<tr><td><code>VIEW_DEFINITION</code></td><td>Definition of the view.</td><td></td></tr>
-<tr><td><code>CHECK_OPTION</code></td><td><code>YES</code> if the <code>WITH CHECK_OPTION</code> clause has been specified, <code>NO</code> otherwise.</td><td></td></tr>
-<tr><td><code>IS_UPDATABLE</code></td><td>Whether the view is updatable or not.</td><td></td></tr>
-<tr><td><code>DEFINER</code></td><td>Account specified in the DEFINER clause (or the default when created).</td><td></td></tr>
-<tr><td><code>SECURITY_TYPE</code></td><td><code>SQL SECURITY</code> characteristic, either <code>DEFINER</code> or <code>INVOKER</code>.</td><td></td></tr>
-<tr><td><code>CHARACTER_SET_CLIENT</code></td><td>The client <a href="/kb/en/data-types-character-sets-and-collations/">character set</a> when the view was created, from the session value of the <code><a href="/kb/en/server-system-variables/#character_set_client">character_set_client</a></code> system variable.</td><td></td></tr>
-<tr><td><code>COLLATION_CONNECTION</code></td><td>The client <a href="/kb/en/data-types-character-sets-and-collations/">collation</a> when the view was created, from the session value of the <a href="/kb/en/server-system-variables/#collation_connection">collation_connection</a> system variable.</td><td></td></tr>
-<tr><td><code>ALGORITHM</code></td><td>The algorithm used in the view. See <a href="/kb/en/view-algorithms/">View Algorithms</a>.</td><td><a href="/kb/en/mariadb-1013-release-notes/">MariaDB 10.1.3</a></td></tr>
+<tr><td><code>TABLE_SCHEMA</code></td><td>Database name containing the view.</td></tr>
+<tr><td><code>TABLE_NAME</code></td><td>View table name.</td></tr>
+<tr><td><code>VIEW_DEFINITION</code></td><td>Definition of the view.</td></tr>
+<tr><td><code>CHECK_OPTION</code></td><td><code>YES</code> if the <code>WITH CHECK_OPTION</code> clause has been specified, <code>NO</code> otherwise.</td></tr>
+<tr><td><code>IS_UPDATABLE</code></td><td>Whether the view is updatable or not.</td></tr>
+<tr><td><code>DEFINER</code></td><td>Account specified in the DEFINER clause (or the default when created).</td></tr>
+<tr><td><code>SECURITY_TYPE</code></td><td><code>SQL SECURITY</code> characteristic, either <code>DEFINER</code> or <code>INVOKER</code>.</td></tr>
+<tr><td><code>CHARACTER_SET_CLIENT</code></td><td>The client <a href="/kb/en/data-types-character-sets-and-collations/">character set</a> when the view was created, from the session value of the <a href="/kb/en/server-system-variables/#character_set_client">character_set_client</a> system variable.</td></tr>
+<tr><td><code>COLLATION_CONNECTION</code></td><td>The client <a href="/kb/en/data-types-character-sets-and-collations/">collation</a> when the view was created, from the session value of the <a href="/kb/en/server-system-variables/#collation_connection">collation_connection</a> system variable.</td></tr>
+<tr><td><code>ALGORITHM</code></td><td>The algorithm used in the view. See <a href="/kb/en/view-algorithms/">View Algorithms</a>.</td></tr>
 </table>
 </div><h2 class="anchored_heading" id="example">Example</h2>
-<pre class="fixed">SELECT * FROM information_schema.VIEWS\G
+<div class="cstm-style" style="font-size:0.8em;"><pre class="fixed wrap">SELECT * FROM information_schema.VIEWS\G
 *************************** 1. row ***************************
        TABLE_CATALOG: def
         TABLE_SCHEMA: test
@@ -425,11 +425,11 @@
 CHARACTER_SET_CLIENT: utf8
 COLLATION_CONNECTION: utf8_general_ci
            ALGORITHM: UNDEFINED
-</pre><h2 class="anchored_heading" id="see-also">See also</h2>
-<ul start="1"><li><code><a href="/kb/en/create-view/">CREATE VIEW</a></code>
-</li><li><code><a href="/kb/en/alter-view/">ALTER VIEW</a></code>
-</li><li><code><a href="/kb/en/drop-view/">DROP VIEW</a></code>
-</li><li><code><a href="show-create-views">SHOW CREATE VIEWS</a></code></li></ul>
+</pre></div><h2 class="anchored_heading" id="see-also">See Also</h2>
+<ul start="1"><li><a href="/kb/en/create-view/">CREATE VIEW</a>
+</li><li><a href="/kb/en/alter-view/">ALTER VIEW</a>
+</li><li><a href="/kb/en/drop-view/">DROP VIEW</a>
+</li><li><a href="show-create-views">SHOW CREATE VIEWS</a></li></ul>
 
     </div>
 
