--- a/Converter/scraped_html/mysqlglobal_priv-table.html
+++ b/Converter/scraped_html/mysqlglobal_priv-table.html
@@ -259,12 +259,12 @@
         <dt>Created</dt>
         <dd>
 
-<span class="datetime" title="2018-12-21 09:20">3 years, 3 months ago</span></dd>
+<span class="datetime" title="2018-12-21 09:20">3 years, 4 months ago</span></dd>
 
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2020-03-18 18:39">2 years ago</span></dd>
+<span class="datetime" title="2022-04-24 18:29">3 hours, 11 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -426,7 +426,7 @@
 </table>
 </div><p>From <a href="/kb/en/mariadb-1052-release-notes/">MariaDB 10.5.2</a>, in order to help the server understand which version a privilege record was written by, the <code>priv</code> field contains a new JSON field, <code>version_id</code> (<a href="https://jira.mariadb.org/browse/MDEV-21704">MDEV-21704</a>).</p>
 <h2 class="anchored_heading" id="examples">Examples</h2>
-<pre class="fixed">select * from mysql.global_priv;
+<div class="cstm-style" style="font-size:0.8em;"><pre class="fixed wrap">select * from mysql.global_priv;
 +-----------+-------------+---------------------------------------------------------------------------------------------------------------------------------------+
 | Host      | User        | Priv                                                                                                                                  |
 +-----------+-------------+---------------------------------------------------------------------------------------------------------------------------------------+
@@ -439,7 +439,7 @@
 | localhost | msandbox_ro | {&#34;access&#34;:262145,&#34;plugin&#34;:&#34;mysql_native_password&#34;,&#34;authentication_string&#34;:&#34;*6C387FC3893DBA1E3BA155E74754DA6682D04747&#34;}                |
 | 127.%     | rsandbox    | {&#34;access&#34;:524288,&#34;plugin&#34;:&#34;mysql_native_password&#34;,&#34;authentication_string&#34;:&#34;*B07EB15A2E7BD9620DAE47B194D5B9DBA14377AD&#34;}                |
 +-----------+-------------+---------------------------------------------------------------------------------------------------------------------------------------+
-</pre><p>Readable format:</p>
+</pre></div><p>Readable format:</p>
 <pre class="fixed">SELECT CONCAT(user, '@', host, ' =&gt; ', JSON_DETAILED(priv)) FROM mysql.global_priv;
 
 +--------------------------------------------------------------------------------------+
