--- a/Converter/scraped_html/mysqlproc-table.html
+++ b/Converter/scraped_html/mysqlproc-table.html
@@ -259,12 +259,12 @@
         <dt>Created</dt>
         <dd>
 
-<span class="datetime" title="2014-11-14 06:56">7 years, 4 months ago</span></dd>
+<span class="datetime" title="2014-11-14 06:56">7 years, 5 months ago</span></dd>
 
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2019-03-30 23:56">3 years ago</span></dd>
+<span class="datetime" title="2022-04-24 18:32">3 hours, 8 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -424,7 +424,7 @@
 <div class="mariadb_from_10_4 mariadb from_10_4 product"><h5 class="product_title">MariaDB starting with <a href="/kb/en/what-is-mariadb-104/">10.4</a></h5><p>In <a href="/kb/en/what-is-mariadb-104/">MariaDB 10.4</a> and later, this table uses the <a href="/kb/en/aria/">Aria</a> storage engine.</p>
 </div><div class="mariadb_to_10_3 mariadb to_10_3 product"><h5 class="product_title">MariaDB until <a href="/kb/en/what-is-mariadb-103/">10.3</a></h5><p>In <a href="/kb/en/what-is-mariadb-103/">MariaDB 10.3</a> and before, this table uses the <a href="/kb/en/myisam-storage-engine/">MyISAM</a> storage engine.</p>
 </div><p>The <code>mysql.proc</code> table contains the following fields:</p>
-<div class="cstm-style darkheader-nospace-borders"><table><tr><th>Field</th><th>Type</th><th>Null</th><th>Key</th><th>Default</th><th>Description</th></tr>
+<div class="cstm-style" style="font-size:0.8em;"><div class="cstm-style darkheader-nospace-borders"><table><tr><th>Field</th><th>Type</th><th>Null</th><th>Key</th><th>Default</th><th>Description</th></tr>
 <tr><td><code>db</code></td><td><code>char(64)</code></td><td>NO</td><td>PRI</td><td></td><td>Database name.</td></tr>
 <tr><td><code>name</code></td><td><code>char(64)</code></td><td>NO</td><td>PRI</td><td></td><td>Routine name.</td></tr>
 <tr><td><code>type</code></td><td><code>enum('FUNCTION','PROCEDURE','PACKAGE', 'PACKAGE BODY')</code></td><td>NO</td><td>PRI</td><td><code>NULL</code></td><td>Whether <a href="/kb/en/stored-procedures/">stored procedure</a>, <a href="/kb/en/stored-functions/">stored function</a> or, from <a href="/kb/en/mariadb-1035-release-notes/">MariaDB 10.3.5</a>, a <a href="/kb/en/create-package/">package</a> or <a href="/kb/en/create-package-body/">package body</a>.</td></tr>
@@ -448,7 +448,7 @@
 <tr><td><code>aggregate</code></td><td><code>enum('NONE', 'GROUP')</code></td><td>NO</td><td></td><td><code>NONE</code></td><td>From <a href="/kb/en/mariadb-1033-release-notes/">MariaDB 10.3.3</a></td></tr>
 <tr><th>Field</th><th>Type</th><th>Null</th><th>Key</th><th>Default</th><th>Description</th></tr>
 </table>
-</div><h2 class="anchored_heading" id="see-also">See Also</h2>
+</div></div><h2 class="anchored_heading" id="see-also">See Also</h2>
 <ul start="1"><li><a href="/kb/en/stored-procedure-internals/">Stored Procedure Internals</a>
 </li><li><a href="https://mariadb.com/blog/mysql-mariadb-migration-handling-privilege-table-differences-when-using-mysqldump">MySQL to MariaDB migration: handling privilege table differences when using mysqldump</a></li></ul>
 
