--- a/Converter/scraped_html/mysqlspider_link_failed_log-table.html
+++ b/Converter/scraped_html/mysqlspider_link_failed_log-table.html
@@ -263,12 +263,12 @@
         <dt>Created</dt>
         <dd>
 
-<span class="datetime" title="2021-08-31 15:23">7 months, 2 weeks ago</span></dd>
+<span class="datetime" title="2021-08-31 15:23">7 months, 3 weeks ago</span></dd>
 
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2021-08-31 15:27">7 months, 2 weeks ago</span></dd>
+<span class="datetime" title="2022-04-24 18:37">3 hours, 3 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -432,7 +432,7 @@
 <tr><td>db_name</td><td>char(64)</td><td>NO</td><td></td><td></td><td></td></tr>
 <tr><td>table_name</td><td>char(199)</td><td>NO</td><td></td><td></td><td></td></tr>
 <tr><td>link_id</td><td>char(64)</td><td>NO</td><td></td><td></td><td></td></tr>
-<tr><td>failed_time</td><td>timestamp</td><td>NO</td><td></td><td>current_timestamp()</td></tr>
+<tr><td>failed_time</td><td>timestamp</td><td>NO</td><td></td><td>current_timestamp()</td><td></td></tr>
 </table>
 </div>
     </div>
