--- a/Converter/scraped_html/show-authors.html
+++ b/Converter/scraped_html/show-authors.html
@@ -255,12 +255,12 @@
         <dt>Created</dt>
         <dd>
 
-<span class="datetime" title="2010-08-23 15:40">11 years, 7 months ago</span></dd>
+<span class="datetime" title="2010-08-23 15:40">11 years, 8 months ago</span></dd>
 
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2020-12-08 14:07">1 year, 4 months ago</span></dd>
+<span class="datetime" title="2022-04-24 13:54">7 hours, 42 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -419,28 +419,139 @@ Comment values. All columns are encoded as latin1.</p>
 </li></ul>
 <p>The order is somewhat related to importance of the contribution given to the MariaDB project, but this is not 100% accurate. There is still room for improvement and debate...</p>
 <h2 class="anchored_heading" id="example">Example</h2>
-<pre class="fixed">SHOW AUTHORS;
-+--------------------------------+---------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------+
-| Name                           | Location                              | Comment                                                                                                                                 |
-+--------------------------------+---------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------+
-| Michael (Monty) Widenius       | Tusby, Finland                        | Lead developer and main author                                                                                                          |
-| Sergei Golubchik               | Kerpen, Germany                       | Architect, Full-text search, precision math, plugin framework, merges etc                                                               |
-| Igor Babaev                    | Bellevue, USA                         | Optimizer, keycache, core work                                                                                                          |
-| Sergey Petrunia                | St. Petersburg, Russia                | Optimizer                                                                                                                               |
-| Oleksandr Byelkin              | Lugansk, Ukraine                      | Query Cache (4.0), Subqueries (4.1), Views (5.0)                                                                                        |
-| Timour Katchaounov             | Sofia , Bulgaria                      | Optimizer                                                                                                                               |
-| Kristian Nielsen               | Copenhagen, Denmark                   | Replication, Async client prototocol, General buildbot stuff                                                                            |
-| Alexander (Bar) Barkov         | Izhevsk, Russia                       | Unicode and character sets                                                                                                              |
-| Alexey Botchkov (Holyfoot)     | Izhevsk, Russia                       | GIS extensions, embedded server, precision math                                                                                         |
-| Daniel Bartholomew             | Raleigh, USA                          | MariaDB documentation                                                                                                                   |
-| Colin Charles                  | Selangor, Malesia                     | MariaDB documentation, talks at a LOT of conferences                                                                                    |
-| Sergey Vojtovich               | Izhevsk, Russia                       | initial implementation of plugin architecture, maintained native storage engines (MyISAM, MEMORY, ARCHIVE, etc), rewrite of table cache |
-| Vladislav Vaintroub            | Mannheim, Germany                     | MariaDB Java connector, new thread pool, Windows optimizations                                                                          |
-| Elena Stepanova                | Sankt Petersburg, Russia              | QA, test cases                                                                                                                          |
-| Georg Richter                  | Heidelberg, Germany                   | New LGPL C connector, PHP connector                                                                                                     |
-| Jan Lindström                  | Ylämylly, Finland                     | Working on InnoDB                                                                                                                       |
-| Lixun Peng                     | Hangzhou, China                       | Multi Source replication                                                                                                                |
-| Percona                        | CA, USA                               | XtraDB, microslow patches, extensions to slow log   
+<pre class="fixed wrap">SHOW AUTHORS\G
+*************************** 1. row ***************************
+    Name: Michael (Monty) Widenius
+Location: Tusby, Finland
+ Comment: Lead developer and main author
+*************************** 2. row ***************************
+    Name: Sergei Golubchik
+Location: Kerpen, Germany
+ Comment: Architect, Full-text search, precision math, plugin framework, merges etc
+*************************** 3. row ***************************
+    Name: Igor Babaev
+Location: Bellevue, USA
+ Comment: Optimizer, keycache, core work
+*************************** 4. row ***************************
+    Name: Sergey Petrunia
+Location: St. Petersburg, Russia
+ Comment: Optimizer
+*************************** 5. row ***************************
+    Name: Oleksandr Byelkin
+Location: Lugansk, Ukraine
+ Comment: Query Cache (4.0), Subqueries (4.1), Views (5.0)
+*************************** 6. row ***************************
+    Name: Timour Katchaounov
+Location: Sofia , Bulgaria
+ Comment: Optimizer
+*************************** 7. row ***************************
+    Name: Kristian Nielsen
+Location: Copenhagen, Denmark
+ Comment: Replication, Async client prototocol, General buildbot stuff
+*************************** 8. row ***************************
+    Name: Alexander (Bar) Barkov
+Location: Izhevsk, Russia
+ Comment: Unicode and character sets
+*************************** 9. row ***************************
+    Name: Alexey Botchkov (Holyfoot)
+Location: Izhevsk, Russia
+ Comment: GIS extensions, embedded server, precision math
+*************************** 10. row ***************************
+    Name: Daniel Bartholomew
+Location: Raleigh, USA
+ Comment: MariaDB documentation, Buildbot, releases
+*************************** 11. row ***************************
+    Name: Colin Charles
+Location: Selangor, Malesia
+ Comment: MariaDB documentation, talks at a LOT of conferences
+*************************** 12. row ***************************
+    Name: Sergey Vojtovich
+Location: Izhevsk, Russia
+ Comment: initial implementation of plugin architecture, maintained native storage engines (MyISAM, MEMORY, ARCHIVE, etc), rewrite of table cache
+*************************** 13. row ***************************
+    Name: Vladislav Vaintroub
+Location: Mannheim, Germany
+ Comment: MariaDB Java connector, new thread pool, Windows optimizations
+*************************** 14. row ***************************
+    Name: Elena Stepanova
+Location: Sankt Petersburg, Russia
+ Comment: QA, test cases
+*************************** 15. row ***************************
+    Name: Georg Richter
+Location: Heidelberg, Germany
+ Comment: New LGPL C connector, PHP connector
+*************************** 16. row ***************************
+    Name: Jan Lindström
+Location: Ylämylly, Finland
+ Comment: Working on InnoDB
+*************************** 17. row ***************************
+    Name: Lixun Peng
+Location: Hangzhou, China
+ Comment: Multi Source replication
+*************************** 18. row ***************************
+    Name: Olivier Bertrand
+Location: Paris, France
+ Comment: CONNECT storage engine
+*************************** 19. row ***************************
+    Name: Kentoku Shiba
+Location: Tokyo, Japan
+ Comment: Spider storage engine, metadata_lock_info Information schema
+*************************** 20. row ***************************
+    Name: Percona
+Location: CA, USA
+ Comment: XtraDB, microslow patches, extensions to slow log
+*************************** 21. row ***************************
+    Name: Vicentiu Ciorbaru
+Location: Bucharest, Romania
+ Comment: Roles
+*************************** 22. row ***************************
+    Name: Sudheera Palihakkara
+Location: 
+ Comment: PCRE Regular Expressions
+*************************** 23. row ***************************
+    Name: Pavel Ivanov
+Location: USA
+ Comment: Some patches and bug fixes
+*************************** 24. row ***************************
+    Name: Konstantin Osipov
+Location: Moscow, Russia
+ Comment: Prepared statements (4.1), Cursors (5.0), GET_LOCK (10.0)
+*************************** 25. row ***************************
+    Name: Ian Gilfillan
+Location: South Africa
+ Comment: MariaDB documentation
+*************************** 26. row ***************************
+    Name: Federico Razolli
+Location: Italy
+ Comment: MariaDB documentation Italian translation
+*************************** 27. row ***************************
+    Name: Guilhem Bichot
+Location: Bordeaux, France
+ Comment: Replication (since 4.0)
+*************************** 28. row ***************************
+    Name: Andrei Elkin
+Location: Espoo, Finland
+ Comment: Replication
+*************************** 29. row ***************************
+    Name: Dmitri Lenev
+Location: Moscow, Russia
+ Comment: Time zones support (4.1), Triggers (5.0)
+*************************** 30. row ***************************
+    Name: Marc Alff
+Location: Denver, CO, USA
+ Comment: Signal, Resignal, Performance schema
+*************************** 31. row ***************************
+    Name: Mikael Ronström
+Location: Stockholm, Sweden
+ Comment: NDB Cluster, Partitioning, online alter table
+*************************** 32. row ***************************
+    Name: Ingo Strüwing
+Location: Berlin, Germany
+ Comment: Bug fixing in MyISAM, Merge tables etc
+*************************** 33. row ***************************
+    Name: Marko Mäkelä
+Location: Helsinki, Finland
+ Comment: InnoDB core developer
 ...
 </pre><h3 class="anchored_heading" id="see-also">See Also</h3>
 <ul start="1"><li><a href="/kb/en/show-contributors/">SHOW CONTRIBUTORS</a>. This list <a href="https://mariadb.org/en/supporters">all members and sponsors of the MariaDB Foundation</a> and other sponsors.</li></ul>
