--- a/Converter/scraped_html/show-contributors.html
+++ b/Converter/scraped_html/show-contributors.html
@@ -255,12 +255,12 @@
         <dt>Created</dt>
         <dd>
 
-<span class="datetime" title="2010-08-23 16:12">11 years, 7 months ago</span></dd>
+<span class="datetime" title="2010-08-23 16:12">11 years, 8 months ago</span></dd>
 
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2020-12-08 13:42">1 year, 4 months ago</span></dd>
+<span class="datetime" title="2022-04-24 13:58">7 hours, 38 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -412,7 +412,7 @@
 the companies and people who financially contribute to MariaDB. For each contributor, it displays <code>Name</code>, <code>Location</code>, and <code>Comment</code> values. All columns are encoded as <code>latin1</code>.</p>
 <p>It displays all <a href="https://mariadb.org/en/supporters">members and sponsors of the MariaDB Foundation</a> as well as other financial contributors.</p>
 <h2 class="anchored_heading" id="example">Example</h2>
-<pre class="fixed">SHOW CONTRIBUTORS;
+<pre class="fixed wrap">SHOW CONTRIBUTORS;
 +---------------------+-------------------------------+-------------------------------------------------------------+
 | Name                | Location                      | Comment                                                     |
 +---------------------+-------------------------------+-------------------------------------------------------------+
