--- a/Converter/scraped_html/show-create-package-body.html
+++ b/Converter/scraped_html/show-create-package-body.html
@@ -260,7 +260,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2018-02-27 15:04">4 years, 1 month ago</span></dd>
+<span class="datetime" title="2022-04-24 14:03">7 hours, 34 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -429,14 +429,14 @@
 
     <li class="mariadb_from_10_3_5"><a href="#examples" title="Examples">Examples</a></li>
 
-    <li class="mariadb_from_10_3_5"><a href="#see-also" title="See also">See also</a> </ol>
+    <li class="mariadb_from_10_3_5"><a href="#see-also" title="See Also">See Also</a> </ol>
 </li>
 </div>
 <h2 class="anchored_heading" id="description">Description</h2>
 <p>The <code>SHOW CREATE PACKAGE BODY</code> statement can be used when <a href="/kb/en/sql_modeoracle-from-mariadb-103/">Oracle SQL_MODE</a> is set.</p>
 <p>Shows the <code>CREATE</code> statement that creates the given package body (i.e. the implementation).</p>
 <h2 class="anchored_heading" id="examples">Examples</h2>
-<pre class="fixed">SHOW CREATE PACKAGE BODY employee_tools\G
+<pre class="fixed wrap">SHOW CREATE PACKAGE BODY employee_tools\G
 *************************** 1. row ***************************
         Package body: employee_tools
             sql_mode: PIPES_AS_CONCAT,ANSI_QUOTES,IGNORE_SPACE,ORACLE,NO_KEY_OPTIONS,NO_TABLE_OPTIONS,NO_FIELD_OPTIONS,NO_AUTO_CREATE_USER
@@ -483,7 +483,7 @@ END
 character_set_client: utf8
 collation_connection: utf8_general_ci
   Database Collation: latin1_swedish_ci
-</pre><h2 class="anchored_heading" id="see-also">See also</h2>
+</pre><h2 class="anchored_heading" id="see-also">See Also</h2>
 <ul start="1"><li><a href="/kb/en/create-package/">CREATE PACKAGE</a>
 </li><li><a href="/kb/en/show-create-package/">SHOW CREATE PACKAGE</a>
 </li><li><a href="/kb/en/drop-package/">DROP PACKAGE</a>
