--- a/Converter/scraped_html/show-create-package.html
+++ b/Converter/scraped_html/show-create-package.html
@@ -260,7 +260,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2018-02-27 15:24">4 years, 1 month ago</span></dd>
+<span class="datetime" title="2022-04-24 14:02">7 hours, 35 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -436,7 +436,7 @@
 <p>The <code>SHOW CREATE PACKAGE</code> statement can be used when <a href="/kb/en/sql_modeoracle-from-mariadb-103/">Oracle SQL_MODE</a> is set.</p>
 <p>Shows the <code>CREATE</code> statement that creates the given package specification.</p>
 <h2 class="anchored_heading" id="examples">Examples</h2>
-<pre class="fixed">SHOW CREATE PACKAGE employee_tools\G
+<pre class="fixed wrap">SHOW CREATE PACKAGE employee_tools\G
 *************************** 1. row ***************************
              Package: employee_tools
             sql_mode: PIPES_AS_CONCAT,ANSI_QUOTES,IGNORE_SPACE,ORACLE,NO_KEY_OPTIONS,NO_TABLE_OPTIONS,NO_FIELD_OPTIONS,NO_AUTO_CREATE_USER
