--- a/Converter/scraped_html/show-table-statistics.html
+++ b/Converter/scraped_html/show-table-statistics.html
@@ -260,7 +260,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2021-09-07 09:48">7 months, 1 week ago</span></dd>
+<span class="datetime" title="2022-04-24 14:14">7 hours, 23 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -398,31 +398,31 @@
 <p>The <code>SHOW TABLE_STATISTICS</code> statementis part of the <a href="/kb/en/user-statistics/">User Statistics</a> feature. It was removed as a separate statement in <a href="/kb/en/mariadb-1011-release-notes/">MariaDB 10.1.1</a>, but effectively replaced by the generic <a href="/kb/en/information-schema-plugins-show-and-flush-statements/">SHOW information_schema_table</a> statement. The <a href="/kb/en/information-schema-table_statistics-table/">information_schema.TABLE_STATISTICS</a> table shows statistics on table usage</p>
 <p>The <a href="/kb/en/server-system-variables/#userstat">userstat</a> system variable must be set to 1 to activate this feature. See the <a href="/kb/en/user-statistics/">User Statistics</a> and <a href="/kb/en/information-schema-table_statistics-table/">information_schema.TABLE_STATISTICS</a> articles for more information.</p>
 <h2 class="anchored_heading" id="example">Example</h2>
-<pre class="fixed"><span class="k">SHOW</span> <span class="n">TABLE_STATISTICS</span><span class="err">\</span><span class="k">G</span>
-<span class="o">***************************</span> <span class="mi">1</span><span class="p">.</span> <span class="k">row</span> <span class="o">***************************</span>
-           <span class="n">Table_schema</span><span class="p">:</span> <span class="n">mysql</span>
-             <span class="k">Table_name</span><span class="p">:</span> <span class="n">proxies_priv</span>
-              <span class="n">Rows_read</span><span class="p">:</span> <span class="mi">2</span>
-           <span class="n">Rows_changed</span><span class="p">:</span> <span class="mi">0</span>
-<span class="n">Rows_changed_x_</span><span class="o">#</span><span class="n">indexes</span><span class="p">:</span> <span class="mi">0</span>
-<span class="o">***************************</span> <span class="mi">2</span><span class="p">.</span> <span class="k">row</span> <span class="o">***************************</span>
-           <span class="n">Table_schema</span><span class="p">:</span> <span class="n">test</span>
-             <span class="k">Table_name</span><span class="p">:</span> <span class="n">employees_example</span>
-              <span class="n">Rows_read</span><span class="p">:</span> <span class="mi">7</span>
-           <span class="n">Rows_changed</span><span class="p">:</span> <span class="mi">0</span>
-<span class="n">Rows_changed_x_</span><span class="o">#</span><span class="n">indexes</span><span class="p">:</span> <span class="mi">0</span>
-<span class="o">***************************</span> <span class="mi">3</span><span class="p">.</span> <span class="k">row</span> <span class="o">***************************</span>
-           <span class="n">Table_schema</span><span class="p">:</span> <span class="n">mysql</span>
-             <span class="k">Table_name</span><span class="p">:</span> <span class="k">user</span>
-              <span class="n">Rows_read</span><span class="p">:</span> <span class="mi">16</span>
-           <span class="n">Rows_changed</span><span class="p">:</span> <span class="mi">0</span>
-<span class="n">Rows_changed_x_</span><span class="o">#</span><span class="n">indexes</span><span class="p">:</span> <span class="mi">0</span>
-<span class="o">***************************</span> <span class="mi">4</span><span class="p">.</span> <span class="k">row</span> <span class="o">***************************</span>
-           <span class="n">Table_schema</span><span class="p">:</span> <span class="n">mysql</span>
-             <span class="k">Table_name</span><span class="p">:</span> <span class="n">db</span>
-              <span class="n">Rows_read</span><span class="p">:</span> <span class="mi">2</span>
-           <span class="n">Rows_changed</span><span class="p">:</span> <span class="mi">0</span>
-<span class="n">Rows_changed_x_</span><span class="o">#</span><span class="n">indexes</span><span class="p">:</span> <span class="mi">0</span>
+<pre class="fixed">SHOW TABLE_STATISTICS\G
+*************************** 1. row ***************************
+           Table_schema: mysql
+             Table_name: proxies_priv
+              Rows_read: 2
+           Rows_changed: 0
+Rows_changed_x_#indexes: 0
+*************************** 2. row ***************************
+           Table_schema: test
+             Table_name: employees_example
+              Rows_read: 7
+           Rows_changed: 0
+Rows_changed_x_#indexes: 0
+*************************** 3. row ***************************
+           Table_schema: mysql
+             Table_name: user
+              Rows_read: 16
+           Rows_changed: 0
+Rows_changed_x_#indexes: 0
+*************************** 4. row ***************************
+           Table_schema: mysql
+             Table_name: db
+              Rows_read: 2
+           Rows_changed: 0
+Rows_changed_x_#indexes: 0
 
 </pre>
     </div>
