--- a/Converter/scraped_html/show-user-statistics.html
+++ b/Converter/scraped_html/show-user-statistics.html
@@ -260,7 +260,7 @@
         <dt>Modified</dt>
         <dd>
 
-<span class="datetime" title="2021-09-07 09:48">7 months, 1 week ago</span></dd>
+<span class="datetime" title="2022-04-24 14:16">7 hours, 22 minutes ago</span></dd>
 
         <dt>Type</dt>
         <dd>article</dd>
@@ -398,31 +398,31 @@
 <p>The <code>SHOW USER_STATISTICS</code> statement is part of the <a href="/kb/en/user-statistics/">User Statistics</a> feature. It was removed as a separate statement in <a href="/kb/en/mariadb-1011-release-notes/">MariaDB 10.1.1</a>, but effectively replaced by the generic <a href="/kb/en/information-schema-plugins-show-and-flush-statements/">SHOW information_schema_table</a> statement. The <a href="/kb/en/information-schema-user_statistics-table/">information_schema.USER_STATISTICS</a> table holds statistics about user activity. You can use this table to find out such things as which user is causing the most load and which users are being abusive. You can also use this table to measure how close to capacity the server may be.</p>
 <p>The <a href="/kb/en/server-system-variables/#userstat">userstat</a> system variable must be set to 1 to activate this feature. See the <a href="/kb/en/user-statistics/">User Statistics</a> and <a href="/kb/en/information-schema-user_statistics-table/">information_schema.USER_STATISTICS</a> table for more information.</p>
 <h2 class="anchored_heading" id="example">Example</h2>
-<pre class="fixed"><span class="k">SHOW</span> <span class="n">USER_STATISTICS</span><span class="err">\</span><span class="k">G</span>
-<span class="o">***************************</span> <span class="mi">1</span><span class="p">.</span> <span class="k">row</span> <span class="o">***************************</span>
-                  <span class="k">User</span><span class="p">:</span> <span class="n">root</span>
-     <span class="n">Total_connections</span><span class="p">:</span> <span class="mi">1</span>
-<span class="n">Concurrent_connections</span><span class="p">:</span> <span class="mi">0</span>
-        <span class="n">Connected_time</span><span class="p">:</span> <span class="mi">3297</span>
-             <span class="n">Busy_time</span><span class="p">:</span> <span class="mi">0</span><span class="p">.</span><span class="mi">14113400000000006</span>
-              <span class="n">Cpu_time</span><span class="p">:</span> <span class="mi">0</span><span class="p">.</span><span class="mi">017637000000000003</span>
-        <span class="n">Bytes_received</span><span class="p">:</span> <span class="mi">969</span>
-            <span class="n">Bytes_sent</span><span class="p">:</span> <span class="mi">22355</span>
-  <span class="n">Binlog_bytes_written</span><span class="p">:</span> <span class="mi">0</span>
-             <span class="n">Rows_read</span><span class="p">:</span> <span class="mi">10</span>
-             <span class="n">Rows_sent</span><span class="p">:</span> <span class="mi">67</span>
-          <span class="n">Rows_deleted</span><span class="p">:</span> <span class="mi">0</span>
-         <span class="n">Rows_inserted</span><span class="p">:</span> <span class="mi">0</span>
-          <span class="n">Rows_updated</span><span class="p">:</span> <span class="mi">0</span>
-       <span class="n">Select_commands</span><span class="p">:</span> <span class="mi">7</span>
-       <span class="n">Update_commands</span><span class="p">:</span> <span class="mi">0</span>
-        <span class="n">Other_commands</span><span class="p">:</span> <span class="mi">0</span>
-   <span class="n">Commit_transactions</span><span class="p">:</span> <span class="mi">1</span>
- <span class="n">Rollback_transactions</span><span class="p">:</span> <span class="mi">0</span>
-    <span class="n">Denied_connections</span><span class="p">:</span> <span class="mi">0</span>
-      <span class="n">Lost_connections</span><span class="p">:</span> <span class="mi">0</span>
-         <span class="n">Access_denied</span><span class="p">:</span> <span class="mi">0</span>
-         <span class="n">Empty_queries</span><span class="p">:</span> <span class="mi">7</span>
+<pre class="fixed">SHOW USER_STATISTICS\G
+*************************** 1. row ***************************
+                  User: root
+     Total_connections: 1
+Concurrent_connections: 0
+        Connected_time: 3297
+             Busy_time: 0.14113400000000006
+              Cpu_time: 0.017637000000000003
+        Bytes_received: 969
+            Bytes_sent: 22355
+  Binlog_bytes_written: 0
+             Rows_read: 10
+             Rows_sent: 67
+          Rows_deleted: 0
+         Rows_inserted: 0
+          Rows_updated: 0
+       Select_commands: 7
+       Update_commands: 0
+        Other_commands: 0
+   Commit_transactions: 1
+ Rollback_transactions: 0
+    Denied_connections: 0
+      Lost_connections: 0
+         Access_denied: 0
+         Empty_queries: 7
 </pre>
     </div>
 
